# monad-sniffer

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: kernel-github.yaml  kernel.yaml
ansible/: README.md  ansible.cfg.example
ansible/inventory/: hosts.yml
ansible/playbooks/: disable_dhcp.yml  disable_wifi_client.yml  enable_dhcp.yml  enable_wifi_client.yml  provision.yml
ansible/roles/ble/files/: monad-ble.sh
ansible/roles/ble/tasks/: main.yml
ansible/roles/ble/templates/: monad-ble.service.j2
ansible/roles/common/defaults/: main.yml
ansible/roles/common/handlers/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/common/templates/: monad-sniffer.service.j2
ansible/roles/management/defaults/: main.yml
ansible/roles/management/handlers/: main.yml
ansible/roles/management/tasks/: main.yml
ansible/roles/management/templates/: dnsmasq.conf.j2  monad-eth0.nmconnection.j2  monad-wifi-client.service.j2  monad-wifi.nmconnection.j2
